--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-  <string name="app_name">Radar Detector</string>
-  <string name="expo_runtime_version">exposdk:51.0.0</string>
+  <string name="app_name">Radar Tinder</string>
+  <string name="expo_system_ui_user_interface_style" translatable="false">light</string>
+  <string name="expo_runtime_version">1.0.1</string>
 </resources>
